--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class='login-container row'>
   <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
 
-  <div class="step-container-inner col-lg-4 col-md-8 col-sm-8 col-xs-10">
+  <form  (keypress)="pressEnter($event)"  class="step-container-inner col-lg-4 col-md-8 col-sm-8 col-xs-10">
     <h1 class='login-header row'>{{isSignIn ? 'Connectez-vous à votre espace' : 'Créez votre compte'}}</h1>
     <div *ngIf="isSignIn && !resetPass" class="login-step-container">
 
@@ -16,15 +16,13 @@
 
       <div class='user-info-row-cont login-row'>
         <span class="user-info-row-title">Mot de passe</span>
-        <form (keydown.enter)="$event.preventDefault()">
           <input type='password' (change)="onChangeUserInfo('password', $event.target.value)" [value]=""
             class="basic-input " />
-        </form>
           <a (click)="resetPass = true" style="text-align: center; text-decoration: underline; margin-top: 3%;" href="#">J'ai oublié mon mot de passe</a>
 
       </div>
       <div *ngIf="loginFailed" class="errorMessage">Oops! Le mot de passe est incorrect...</div>
-      <button class="next-btn-no-margin login-btn " (keypress)="pressEnter($event, 'signin')" (click)="onLogin()" type="button">Connexion</button>
+      <button class="next-btn-no-margin login-btn "(click)="onLogin()" type="button">Connexion</button>
       <button class="prev-btn login-btn" (click)="onSwitchLoginType()" type="button">Retour</button>
     </div>
 
@@ -82,7 +80,7 @@
 
     </div>
 
-  </div>
+  </form>
 
   <div class="col-lg-4 col-md-2 col-sm-2 col-xs-2"></div>
 
