--- a/src/app/neon-form/neon-form.component.scss
+++ b/src/app/neon-form/neon-form.component.scss
@@ -260,49 +260,49 @@ button:disabled {
   cursor: default !important;
   pointer-events: all !important;
 }
-  .blanc {
+  .Blanc {
     
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #fff, 0 0 35px #fff, 0 0 40px #fff, 0 0 50px #fff, 0 0 75px #fff;
   }
-  .blanc-chaud {
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ede3c5, 0 0 35px #ede3c5, 0 0 40px #ede3c5, 0 0 50px #ede3c5, 0 0 75px #ede3c5;
+  .Blanc.chaud{
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ede3c5, 0 0 35px #ede3c5, 0 0 40px #ede3c5, 0 0 50px #ede3c5, 0 0 75px #ede3c5 !important;
 
   }
-  .orange {
+  .Orange {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffa42c, 0 0 35px #ffa42c, 0 0 40px #ffa42c, 0 0 50px #ffa42c, 0 0 75px #ffa42c;
     // text-shadow: 0 0 5px #fff, 0 0 5px rgba(158, 195, 198 , 0.14);
 
   }
-  .jaune {
+  .Jaune {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ffe600, 0 0 35px #ffe600, 0 0 40px #ffe600, 0 0 50px #ffe600, 0 0 75px #ffe600;
 
   }
-  .rouge {
+  .Rouge {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff0000, 0 0 35px #ff0000, 0 0 40px #ff0000, 0 0 50px #ff0000, 0 0 75px #ff0000;
 
   }
-  .rose {
+  .Rose {
       text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff73ff, 0 0 35px #ff73ff, 0 0 40px #ff73ff, 0 0 50px #ff73ff, 0 0 75px #ff73ff;
 
   }
-  .fuschia {
+  .Fuschia {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #df29ff, 0 0 35px #df29ff, 0 0 40px #df29ff, 0 0 50px #df29ff, 0 0 75px #df29ff;
 
   }
-  .violet {
+  .Violet {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #9527ff, 0 0 35px #9527ff, 0 0 40px #9527ff, 0 0 50px #9527ff, 0 0 75px #9527ff;
 
   }
 
-  .bleu {
+  .Bleu {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #337dff, 0 0 35px #337dff, 0 0 40px #337dff, 0 0 50px #337dff, 0 0 75px #337dff;
 
   }
-  .vert {
+  .Vert {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #15e81f, 0 0 35px #15e81f, 0 0 40px #15e81f, 0 0 50px #15e81f, 0 0 75px #15e81f;
 
   }
-  .turquoise {
+  .Turquoise {
     text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #17fff9, 0 0 35px #17fff9, 0 0 40px #17fff9, 0 0 50px #17fff9, 0 0 75px #17fff9;
 
   }
